ARouter通过scheme显示一张网络图片

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="a_activity">Activity A</string>
     <string name="b_activity">Activity B</string>
     <string name="c_activity">Activity C</string>
+    <string name="url_to_baidu">http://dev.mcloudlife.com/img/chat/gm_bp_1.png?time=1451275894</string>
+    <string name="img_content_desc">img</string>
 </resources>
